# SpookyBot

./: .gitignore  README.md  config.json  fun.py  main.py  pyproject.toml  requirements.txt  utility.py
.github/ISSUE_TEMPLATE/: bug-report.md  suggestion.md
