[tool.poetry]
name = "SpookyBot"
version = "0.1.0"
description = "Custom Discord bot made for Spectral Servers."
authors = ["TheRandomnessGuy"]

[tool.poetry.dependencies]
python = "^3.5.3"
discord = "^1.0.1"
insprio = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
